# src/dtos/common-word.dto.ts
@@ -1,4 +1,4 @@
-import { plainToClass, Transform, TransformFnParams, Type } from 'class-transformer';
+import { plainToClass, Transform } from 'class-transformer';
 import { IsString, IsArray, ArrayMinSize, IsOptional, ValidateNested, IsDefined, IsNotEmptyObject } from 'class-validator';
 
 class UsageExampleDto {
@@ -7,41 +7,49 @@ class UsageExampleDto {
 
   @IsString()
   translation: string;
-
 }
 
 export class CreateCommonWordDto {
   @IsString()
   word: string;
- 
+
   @IsArray()
   @ArrayMinSize(1)
-  translation: string[];
+  translations: string[];
 
-  @IsOptional()
+  @IsArray()
+  @ArrayMinSize(1)
+  definitions: string[];
+
+  // @IsOptional()
   @IsString()
   transcription: string;
 
-  @IsOptional()
+  // @IsOptional()
   @IsArray()
   @ArrayMinSize(1)
   @ValidateNested({ each: true })
   // Additional validating for correct nested DTO field.
-  @Transform(({value: values}) => values.map(value => plainToClass(UsageExampleDto, value)))
+  @Transform(({ value: values }) => values.map(value => plainToClass(UsageExampleDto, value)))
   usageExamples: UsageExampleDto[];
 }
- 
+
 
 
 export class UpdateCommonWordDto {
   @IsOptional()
   @IsString()
   word: string;
- 
+
   @IsOptional()
   @IsArray()
   @ArrayMinSize(1)
-  translation: string[];
+  translations: string[];
+
+  @IsOptional()
+  @IsArray()
+  @ArrayMinSize(1)
+  definitions: string[];
 
   @IsOptional()
   @IsString()
@@ -52,7 +60,7 @@ export class UpdateCommonWordDto {
   @ArrayMinSize(1)
   @ValidateNested({ each: true })
   // Additional validating for correct nested DTO field.
-  @Transform(({value: values}) => values.map(value => plainToClass(UsageExampleDto, value)))
+  @Transform(({ value: values }) => values.map(value => plainToClass(UsageExampleDto, value)))
   usageExamples: UsageExampleDto[];
 }
 
