# src/models/user-word.model.ts
@@ -11,7 +11,8 @@ export const userWordSchema = new mongoose.Schema<UserWord>(
 		},
 		word: { type: String, required: true },
 		transcription: { type: String, default: 'transcription' },
-		translation: { type: [String], required: true },
+		definitions: { type: [String], required: true },
+		translations: { type: [String], required: true },
 		usageExamples: {
 			type: [usageExampleSchema],
 			default: [{ sentence: '', translation: '' }],
